crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-italian.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ita"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Marco",
            "role": "Child",
            "speaker_code": "MAR"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;05.24",
        "corpus": "tonelli",
        "language": "ita",
        "role": "Child",
        "sex": "male",
        "speaker": "MAR",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "tonelli",
        "language": "ita",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "12-JAN-1995",
        "participant": "MAR",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "Udine",
        "type": "location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "06-JUL-1997",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Italian mor with clitic",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "bisognare",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "mettere",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "via",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "lemma": "ancora",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "Marco",
                  "pos": "propn"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "CCOMP"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "ADVMOD"
              },
              {
                "head": 2,
                "index": 4,
                "relation": "ADVMOD"
              },
              {
                "head": 2,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 1,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "bisogna",
                  "type": "text"
                }
              ],
              "raw_text": "bisogna",
              "span": {
                "end": 262,
                "start": 255
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "metterne",
                  "type": "text"
                }
              ],
              "raw_text": "metterne",
              "span": {
                "end": 271,
                "start": 263
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "via",
                  "type": "text"
                }
              ],
              "raw_text": "via",
              "span": {
                "end": 275,
                "start": 272
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ancora",
                  "type": "text"
                }
              ],
              "raw_text": "ancora",
              "span": {
                "end": 282,
                "start": 276
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Marco",
                  "type": "text"
                }
              ],
              "raw_text": "Marco",
              "span": {
                "end": 288,
                "start": 283
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "MAR": {
      "birth_date": "12-JAN-1995",
      "code": "MAR",
      "id": {
        "age": "2;05.24",
        "corpus": "tonelli",
        "language": "ita",
        "role": "Child",
        "sex": "male",
        "speaker": "MAR"
      },
      "name": "Marco",
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "tonelli",
        "language": "ita",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
